# LoggerPlus

./: .gitignore  MANIFEST.in  README.md  install_powershell.sh  pyproject.toml  setup.cfg  setup.py
examples/: basic_example.py
loggerplus/: __init__.py
tests/: test_magic_spoofers.py
utility/: error_handling.py  misc.py
