[metadata]
name = LoggerPlus
version = 0.1.0
author = Benjamin Auquite
author_email = halomastar@gmail.com
description = A wrapper around the Python logging module that provides a more flexible and powerful logging solution.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/th3w1zard1/LoggerPlus
license = LGPLv2.1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: LGPLv2.1 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    # List dependencies

[options.package_data]
* = *.txt, *.rst

[options.extras_require]
dev =
    check-manifest
    pytest
    coverage

[bdist_wheel]
universal = 1
