[metadata]
name = loggerplus
version = 0.1.2
description = A wrapper around the Python logging module that provides a more flexible and powerful logging solution.
long_description = file: README.md
long_description_content_type = text/markdown
author = Benjamin Auquite
author_email = halomastar@gmail.com
url = https://github.com/th3w1zard1/LoggerPlus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
color =
    colorama

[options.packages.find]
include = loggerplus, utility

[options.package_data]
* = LICENSE

[project.urls]
Homepage = https://github.com/th3w1zard1/LoggerPlus
Documentation = https://github.com/th3w1zard1/LoggerPlus/blob/master/README.md
Repository = https://github.com/th3w1zard1/LoggerPlus.git
Issues = https://github.com/th3w1zard1/LoggerPlus/issues
# Changelog = https://github.com/th3w1zard1/LoggerPlus/blob/master/CHANGELOG.md
